--- a/index.html
+++ b/index.html
@@ -200,10 +200,10 @@
   <button class="dark-toggle" onclick="toggleDarkMode()">Toggle Dark Mode</button>
   <img src="./prabu.jpg" alt="Profile Picture" class="profile-picture" id="profileImage" style="margin: 0 1rem 0 0; align-self: flex-start;">
   <div style="text-align: left;">
-    <h1> PRABU RESUME</h1>
+    <h1> A.PRABU RESUME</h1>
     
   </div>
-  <p>COMPUTER SCIENCE DEPARTMENT</p>
+  <p>DEPARTMENT OF COMPUTER SCIENCE</p>
   <input type="file" id="fileInput" accept="image/*" style="display:none">
   <button onclick="showModal()">Change Profile</button>
 </header>
@@ -226,6 +226,8 @@
 
 <section id="education">
   <h2>Education</h2>
+   <p>BCA-UNIVERSITY OF MADRAS</p>
+   <p>B.Ed-TAMIL NADU UNIVERSITY</p>
   <p>MCA-PERIYAR UNIVERSITY</p>
 </section>
 
