--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 </section>
 
 <footer>
-  <p>&copy; 2025 Vignesh Mathiyalagan. All rights reserved.</p>
+  <p>&copy; 2025 Prabu. A All rights reserved.</p>
 </footer>
 
 <div class="modal" id="passwordModal">
