--- a/index.html
+++ b/index.html
@@ -226,9 +226,9 @@
 
 <section id="education">
   <h2>Education</h2>
-   <p>BCA-UNIVERSITY OF MADRAS</p>
-   <p>B.Ed-TAMIL NADU UNIVERSITY</p>
-  <p>MCA-PERIYAR UNIVERSITY</p>
+   <p>BCA-University of Madras</p>
+   <p>B.Ed-Tmail Nadu University</p>
+  <p>MCA-Periyar University</p>
 </section>
 
 <section id="skills">
@@ -264,8 +264,8 @@
 
 <section id="contact">
   <h2>Contact</h2>
-  <p>Email: <a href="mailto:vignesh@example.com">vignesh@example.com</a></p>
-  <p>Phone: +91-9876543210</p>
+  <p>Email: <a href="mailto:prabu.avp@gmail.com">Prabu.avp@gmail.com</a></p>
+  <p>Phone: +91-9500584039</p>
   <p>Location: Chennai, India</p>
   <div style="margin-top: 1rem;">
     <a href="https://linkedin.com/in/vignesh" target="_blank">LinkedIn</a> |
