--- a/index.html
+++ b/index.html
@@ -226,9 +226,9 @@
 
 <section id="education">
   <h2>Education</h2>
-   <p>BCA-University of Madras</p>
+   <p>B.C.A-University of Madras</p>
    <p>B.Ed-Tmail Nadu University</p>
-  <p>MCA-Periyar University</p>
+  <p>M.C.A-Periyar University</p>
 </section>
 
 <section id="skills">
