--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
 <section id="about" class="active">
   <h2>About Me</h2>
-  <p>I'm a <b>cybersecurity expert</b> and technology enthusiast with over 7 years of experience. I help organizations build secure systems and educate others about online safety. I’m passionate about ethical hacking, digital forensics, and emerging technologies.</p>
+  <p>I'm A.Prabu M.C.A.,M.Phil</p><p>Nazareth College of Arts and Science</p><p>Assistand Professor</p><p>Department of Computer Science</p><p>Kovilpathagai-Avadi</p><b>cybersecurity expert</b> and technology enthusiast with over 7 years of experience. I help organizations build secure systems and educate others about online safety. I’m passionate about ethical hacking, digital forensics, and emerging technologies.</p>
 </section>
 
 <section id="education">
