--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
 <section id="about" class="active">
   <h2>About Me</h2>
-  <p>I'm A.Prabu M.C.A.,M.Phil</p><p>Nazareth College of Arts and Science</p><p>Assistand Professor</p><p>Department of Computer Science</p><p>Kovilpathagai-Avadi</p>
+  <p>A.Prabu M.C.A.,M.Phil</p><p>Nazareth College of Arts and Science</p><p>Assistand Professor</p><p>Department of Computer Science</p><p>Kovilpathagai-Avadi</p>
 </section>
 
 <section id="education">
