--- a/index.html
+++ b/index.html
@@ -269,7 +269,8 @@
   <p>Location: Chennai, India</p>
   <div style="margin-top: 1rem;">
     <a href="https://linkedin.com/in/vignesh" target="_blank">LinkedIn</a> |
-    <a href="https://github.com/vignesh" target="_blank">GitHub</a> |
+    <a href="https://github.com/vignesh" target="_blank">GitHub</a> 
+    <a href="https://prabu1985.github.io/New-portfolio/">Resume</a>|
     <a href="https://twitter.com/vignesh" target="_blank">Twitter</a> |
     <a href="https://instagram.com/vignesh" target="_blank">Instagram</a>
   </div>
@@ -302,7 +303,7 @@
 <section id="experience">
   <h2>Experience</h2>
   <ul>
-    <li><b>Cybersecurity Analyst</b> – SecureNet Pvt Ltd (2021–Present)<br>Monitored, detected, and mitigated network threats using SIEM tools.</li>
+    <li><b>Assistant Professor</b> – SecureNet Pvt Ltd (2021–Present)<br>Monitored, detected, and mitigated network threats using SIEM tools.</li>
     <li><b>Penetration Tester</b> – Freelance (2019–2021)<br>Performed ethical hacking assessments for startups and provided mitigation reports.</li>
     <li><b>Intern – IBM Cloud Division</b> (2018)<br>Worked on automation scripts and cloud deployment prototypes.</li>
   </ul>
